Fix metics alignment

--- a/src/components/metrics/metrics.css
+++ b/src/components/metrics/metrics.css
@@ -19,6 +19,6 @@
     .Metrics {
         grid-column: 3 / 15;
 
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 }
